# protoclaw

./: .dockerignore  .gitignore  .trivyignore  AGENTS.md  CHANGELOG.md  CLAUDE.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  Cargo.toml  Dockerfile  LICENSE-APACHE  LICENSE-MIT  README.md  SECURITY.md  SUPPORT.md  anyclaw.schema.json  anyclaw.toml  cliff.toml  clippy.toml  deny.toml  idea.md  protoclaw.toml  release-plz.toml
crates/anyclaw/: AGENTS.md  Cargo.toml
crates/anyclaw-agents/: AGENTS.md  Cargo.toml
crates/anyclaw-agents/src/: acp_error.rs  acp_types.rs  backend.rs  commands.rs  connection.rs  docker_backend.rs  error.rs  fs_sandbox.rs  incoming.rs  lib.rs  local_backend.rs  manager.rs  platform_commands.rs  sdk_runner.rs  session_queue.rs  session_recovery.rs  slot.rs
crates/anyclaw-channels/: AGENTS.md  Cargo.toml
crates/anyclaw-channels/src/: access_control.rs  connection.rs  debug_http.rs  error.rs  lib.rs  manager.rs  session_queue.rs
crates/anyclaw-config/: AGENTS.md  Cargo.toml
crates/anyclaw-config/src/: defaults.yaml  env_yaml.rs  error.rs  extension_defaults.rs  lib.rs  parse.rs  resolve.rs  schema_overlays.rs  subst_yaml.rs  types.rs  validate.rs
crates/anyclaw-core/: AGENTS.md  Cargo.toml
crates/anyclaw-core/src/: agents_command.rs  backoff.rs  constants.rs  context_store.rs  error.rs  health.rs  lib.rs  manager.rs  session_store.rs  slot_lifecycle.rs  sqlite_session_store.rs  tools_command.rs  types.rs
crates/anyclaw-jsonrpc/: AGENTS.md  Cargo.toml
crates/anyclaw-jsonrpc/src/: codec.rs  error.rs  lib.rs  types.rs
crates/anyclaw-sdk-agent/: AGENTS.md  CHANGELOG.md  Cargo.toml  README.md
crates/anyclaw-sdk-agent/src/: adapter.rs  error.rs  generic.rs  lib.rs
crates/anyclaw-sdk-channel/: AGENTS.md  CHANGELOG.md  Cargo.toml  README.md
crates/anyclaw-sdk-channel/src/: broker.rs  content.rs  harness.rs  jsonrpc.rs  lib.rs  testing.rs  trait_def.rs
crates/anyclaw-sdk-tool/: AGENTS.md  CHANGELOG.md  Cargo.toml  README.md
crates/anyclaw-sdk-tool/src/: error.rs  lib.rs  server.rs  trait_def.rs
crates/anyclaw-sdk-types/: AGENTS.md  CHANGELOG.md  Cargo.toml  README.md
crates/anyclaw-sdk-types/src/: acp.rs  channel.rs  channel_event.rs  lib.rs  permission.rs  proptest_impls.rs  session_key.rs
crates/anyclaw-supervisor/: Cargo.toml
crates/anyclaw-supervisor/src/: admin_server.rs  factory.rs  health.rs  lib.rs  shutdown.rs
crates/anyclaw-test-helpers/: Cargo.toml
crates/anyclaw-test-helpers/src/: config.rs  handles.rs  lib.rs  paths.rs  poll.rs  ports.rs  sse.rs  supervisor.rs  timeout.rs
crates/anyclaw/src/: banner.rs  cli.rs  init.rs  lib.rs  main.rs  status.rs  supervisor.rs
crates/protoclaw/: AGENTS.md  Cargo.toml
crates/protoclaw-agents/: AGENTS.md  Cargo.toml
crates/protoclaw-agents/src/: acp_error.rs  acp_types.rs  backend.rs  connection.rs  docker_backend.rs  error.rs  lib.rs  local_backend.rs  manager.rs  slot.rs
crates/protoclaw-channels/: AGENTS.md  Cargo.toml
crates/protoclaw-channels/src/: connection.rs  debounce.rs  debug_http.rs  error.rs  lib.rs  manager.rs  session_queue.rs  types.rs
crates/protoclaw-config/: AGENTS.md  Cargo.toml
crates/protoclaw-config/src/: defaults.toml  defaults.yaml  error.rs  lib.rs  parse.rs  resolve.rs  subst_toml.rs  subst_yaml.rs  types.rs  validate.rs
crates/protoclaw-core/: AGENTS.md  Cargo.toml
crates/protoclaw-core/src/: agents_command.rs  backoff.rs  channel_event.rs  constants.rs  error.rs  health.rs  lib.rs  manager.rs  message.rs  session_store.rs  slot_lifecycle.rs  sqlite_session_store.rs  tools_command.rs  types.rs
crates/protoclaw-sdk-agent/: AGENTS.md  CHANGELOG.md  Cargo.toml  README.md
crates/protoclaw-sdk-agent/src/: adapter.rs  error.rs  generic.rs  lib.rs
crates/protoclaw-sdk-channel/: AGENTS.md  CHANGELOG.md  Cargo.toml  README.md
crates/protoclaw-sdk-channel/src/: broker.rs  content.rs  error.rs  harness.rs  lib.rs  testing.rs  trait_def.rs
crates/protoclaw-sdk-tool/: AGENTS.md  CHANGELOG.md  Cargo.toml  README.md
crates/protoclaw-sdk-tool/src/: error.rs  lib.rs  server.rs  trait_def.rs
crates/protoclaw-sdk-types/: AGENTS.md  CHANGELOG.md  Cargo.toml  README.md
crates/protoclaw-sdk-types/src/: acp.rs  channel.rs  channel_event.rs  lib.rs  permission.rs  session_key.rs
crates/protoclaw-supervisor/: Cargo.toml
crates/protoclaw-supervisor/src/: admin_server.rs  lib.rs
crates/protoclaw-test-helpers/: Cargo.toml
crates/protoclaw-test-helpers/src/: config.rs  handles.rs  lib.rs  paths.rs  poll.rs  ports.rs  sse.rs  supervisor.rs  timeout.rs
crates/protoclaw-tools/: AGENTS.md  Cargo.toml
crates/protoclaw-tools/src/: error.rs  external.rs  lib.rs  manager.rs  mcp_host.rs  wasm_runner.rs  wasm_tool.rs
crates/protoclaw/src/: banner.rs  cli.rs  init.rs  main.rs  status.rs  stubs.rs  supervisor.rs
ext/: Cargo.toml  Dockerfile  release-plz.toml
ext/agents/: AGENTS.md
ext/agents/mock-agent/: Cargo.toml  defaults.yaml
ext/agents/mock-agent/src/: main.rs
ext/agents/opencode-wrapper/: Cargo.toml
ext/agents/opencode-wrapper/src/: main.rs
ext/channels/: AGENTS.md
ext/channels/debug-http/: Cargo.toml  defaults.yaml
ext/channels/debug-http/src/: main.rs
ext/channels/sdk-test-channel/: Cargo.toml
ext/channels/telegram/: AGENTS.md  Cargo.toml  defaults.yaml
ext/tools/: AGENTS.md
ext/tools/sdk-test-tool/: Cargo.toml
ext/tools/system-info/: Cargo.toml  build.rs
tests/integration/: Cargo.toml  Dockerfile.mock-agent
tests/integration/src/: lib.rs
tests/integration/tests/: e2e.rs  example_config_test.rs  example_configs.rs  flows_acp_wire.rs  flows_batch_advanced.rs  flows_boot.rs  flows_cancel.rs  flows_config_path.rs  flows_crash.rs  flows_debounce.rs  flows_docker.rs  flows_docker_advanced.rs  flows_dual_channel.rs  flows_error_cases.rs  flows_health.rs  flows_message.rs  flows_multi_agent.rs  flows_permission.rs  flows_queue.rs  flows_resilience.rs  flows_response.rs  flows_sdk_channel.rs  flows_sdk_tool.rs  flows_session.rs  flows_shutdown.rs  flows_thinking.rs  flows_tool_advanced.rs  flows_wasm_e2e.rs
(+382 files in other folders)
