[workspace]
resolver = "2"
members = ["crates/*", "tests/mock-agent", "tests/integration", "ext/channels/debug-http"]

[workspace.package]
edition = "2024"
rust-version = "1.85"

[workspace.dependencies]
protoclaw-acp = { path = "crates/protoclaw-acp" }
protoclaw-agents = { path = "crates/protoclaw-agents" }
protoclaw-jsonrpc = { path = "crates/protoclaw-jsonrpc" }
protoclaw-tools = { path = "crates/protoclaw-tools" }
protoclaw-core = { path = "crates/protoclaw-core" }
protoclaw-config = { path = "crates/protoclaw-config" }
tokio = { version = "1.50", features = ["full"] }
tokio-util = { version = "0.7", features = ["codec"] }
futures = "0.3"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
thiserror = "2"
anyhow = "1"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
figment = { version = "0.10", features = ["toml", "env"] }
bytes = "1"
uuid = { version = "1", features = ["v4"] }
clap = { version = "4", features = ["derive", "env"] }
tokio-test = "0.4"
tempfile = "3"
toml = "0.8"
axum = "0.8"
tokio-stream = { version = "0.1", features = ["sync"] }
protoclaw-channels = { path = "crates/protoclaw-channels" }
protoclaw-sdk-types = { path = "crates/protoclaw-sdk-types" }
protoclaw-sdk-channel = { path = "crates/protoclaw-sdk-channel" }
protoclaw-sdk-tool = { path = "crates/protoclaw-sdk-tool" }
