[workspace]
resolver = "2"
members = ["crates/*", "tests/integration", "ext/channels/debug-http", "ext/channels/telegram", "ext/channels/sdk-test-channel", "ext/agents/mock-agent", "ext/agents/opencode-wrapper", "ext/tools/sdk-test-tool", "examples/01-fake-agent-telegram-bot/tools/system-info"]

[workspace.package]
edition = "2024"
rust-version = "1.94"
license = "MIT OR Apache-2.0"
repository = "https://github.com/donbader/protoclaw"
homepage = "https://github.com/donbader/protoclaw"

[workspace.dependencies]
protoclaw-agents = { path = "crates/protoclaw-agents" }
protoclaw-jsonrpc = { path = "crates/protoclaw-jsonrpc" }
protoclaw-tools = { path = "crates/protoclaw-tools" }
protoclaw-core = { path = "crates/protoclaw-core" }
protoclaw-config = { path = "crates/protoclaw-config" }
protoclaw-supervisor = { path = "crates/protoclaw-supervisor" }
tokio = { version = "1.50", default-features = false }
tokio-util = { version = "0.7", features = ["codec"] }
futures = "0.3"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
thiserror = "2"
anyhow = "1"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter", "json"] }
figment = { version = "0.10", features = ["toml", "yaml", "env"] }
bytes = "1"
uuid = { version = "1", features = ["v4"] }
clap = { version = "4", features = ["derive", "env"] }
tokio-test = "0.4"
tempfile = "3"
axum = "0.8"
tokio-stream = { version = "0.1", features = ["sync"] }
protoclaw-channels = { path = "crates/protoclaw-channels" }
protoclaw-sdk-types = { path = "crates/protoclaw-sdk-types", version = "0.3.0" }
protoclaw-sdk-channel = { path = "crates/protoclaw-sdk-channel", version = "0.2.4" }
protoclaw-sdk-tool = { path = "crates/protoclaw-sdk-tool", version = "0.2.4" }
protoclaw-sdk-agent = { path = "crates/protoclaw-sdk-agent", version = "0.2.4" }
protoclaw-test-helpers = { path = "crates/protoclaw-test-helpers" }
wasmtime = "43"
wasmtime-wasi = "43"
rstest = "0.26"
serde_yaml = { package = "yaml_serde", version = "0.10" }
subst = "0.3"
bollard = "0.20"
temp-env = "0.3"
metrics = "0.24"
metrics-exporter-prometheus = "0.18"

[profile.release]
strip = true
lto = "thin"
