[workspace]
resolver = "2"
members = ["crates/*", "tests/integration", "ext/channels/debug-http", "ext/channels/telegram", "ext/channels/sdk-test-channel", "ext/agents/mock-agent", "ext/tools/sdk-test-tool", "ext/tools/system-info"]

[workspace.package]
edition = "2024"
rust-version = "1.94"
license = "MIT OR Apache-2.0"
repository = "https://github.com/donbader/anyclaw"
homepage = "https://github.com/donbader/anyclaw"

[workspace.dependencies]
anyclaw-agents = { path = "crates/anyclaw-agents" }
anyclaw-jsonrpc = { path = "crates/anyclaw-jsonrpc" }
anyclaw-tools = { path = "crates/anyclaw-tools" }
anyclaw-core = { path = "crates/anyclaw-core" }
anyclaw-config = { path = "crates/anyclaw-config" }
anyclaw-supervisor = { path = "crates/anyclaw-supervisor" }
tokio = { version = "1.50", default-features = false }
tokio-util = { version = "0.7", features = ["codec"] }
futures = "0.3"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
thiserror = "2"
anyhow = "1"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter", "json"] }
figment = { version = "0.10", features = ["toml", "yaml", "env"] }
bytes = "1"
uuid = { version = "1", features = ["v4"] }
clap = { version = "4", features = ["derive", "env"] }
tokio-test = "0.4"
tempfile = "3"
axum = "0.8"
tokio-stream = { version = "0.1", features = ["sync"] }
anyclaw-channels = { path = "crates/anyclaw-channels" }
anyclaw-sdk-types = { path = "crates/anyclaw-sdk-types", version = "0.5.2" }
anyclaw-sdk-channel = { path = "crates/anyclaw-sdk-channel", version = "0.3.1" }
anyclaw-sdk-tool = { path = "crates/anyclaw-sdk-tool", version = "0.2.8" }
anyclaw-sdk-agent = { path = "crates/anyclaw-sdk-agent", version = "0.2.8" }
anyclaw-test-helpers = { path = "crates/anyclaw-test-helpers" }
wasmtime = "43"
wasmtime-wasi = "43"
rstest = "0.26"
agent-client-protocol-schema = { version = "0.11", features = ["unstable_session_resume", "unstable_session_fork"] }
serde_yaml = { package = "yaml_serde", version = "0.10" }
subst = "0.3"
bollard = "0.20"
temp-env = "0.3"
metrics = "0.24"
metrics-exporter-prometheus = "0.18"
dashmap = "6"
proptest = "1"

[workspace.lints.clippy]
unwrap_used = "warn"
expect_used = "allow"
disallowed_types = "warn"
needless_pass_by_value = "warn"
redundant_closure_for_method_calls = "warn"
manual_let_else = "warn"
implicit_clone = "warn"
cloned_instead_of_copied = "warn"
flat_map_option = "warn"
semicolon_if_nothing_returned = "warn"

[workspace.lints.rust]
unused_imports = "warn"
dead_code = "warn"
unused_variables = "warn"

[profile.release]
strip = true
lto = "thin"
