[package]
name = "anyclaw-core"
version = "0.1.0"
publish = false
edition.workspace = true
rust-version.workspace = true

[dependencies]
anyclaw-sdk-types = { workspace = true }
tokio = { workspace = true, default-features = false, features = ["sync"] }
tokio-util.workspace = true
serde.workspace = true
serde_json.workspace = true
thiserror.workspace = true
tracing.workspace = true
uuid.workspace = true
rusqlite = { version = "0.31", features = ["bundled"] }

[dev-dependencies]
rstest = { workspace = true }
tokio = { workspace = true, default-features = false, features = ["macros", "rt"] }

[lints]
workspace = true
