[package]
name = "anyclaw-jsonrpc"
version = "0.1.0"
publish = false
edition.workspace = true
rust-version.workspace = true

[dependencies]
tokio-util.workspace = true
serde.workspace = true
serde_json.workspace = true
thiserror.workspace = true
bytes.workspace = true
tracing.workspace = true

[dev-dependencies]
rstest.workspace = true
