[package]
name = "anyclaw-sdk-channel"
version = "0.3.3"
description = "Channel SDK for anyclaw — build messaging channel integrations"
edition.workspace = true
rust-version.workspace = true
license = "MIT OR Apache-2.0"
repository = "https://github.com/donbader/anyclaw"
homepage = "https://github.com/donbader/anyclaw"
readme = "README.md"
keywords = ["agent", "mcp", "acp", "sdk"]
categories = ["network-programming"]

[dependencies]
anyclaw-sdk-types = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
tokio = { workspace = true, default-features = false, features = ["io-util", "io-std", "macros", "rt-multi-thread", "sync"] }
thiserror = { workspace = true }
tracing = { workspace = true }

[dev-dependencies]
rstest = { workspace = true }

[lints]
workspace = true
