[package]
name = "anyclaw-supervisor"
version = "0.1.0"
publish = false
edition.workspace = true
rust-version.workspace = true

[dependencies]
anyclaw-core = { path = "../anyclaw-core" }
anyclaw-config = { path = "../anyclaw-config" }
anyclaw-agents = { path = "../anyclaw-agents" }
anyclaw-channels = { workspace = true }
anyclaw-tools = { workspace = true }
tokio = { workspace = true, features = ["macros", "rt", "rt-multi-thread", "signal", "sync", "time"] }
tokio-util = { workspace = true }
thiserror = { workspace = true }
tracing = { workspace = true }
serde_json = { workspace = true }
axum = { workspace = true, features = ["tokio"] }
metrics = { workspace = true }
metrics-exporter-prometheus = { workspace = true }

[dev-dependencies]
rstest = { workspace = true }
tempfile = { workspace = true }

[lints]
workspace = true
