[package]
name = "anyclaw-test-helpers"
version = "0.1.0"
edition.workspace = true
rust-version.workspace = true
publish = false

[dependencies]
anyclaw-config = { workspace = true }
anyclaw-core = { workspace = true }
anyclaw-supervisor = { workspace = true }
tokio = { workspace = true, features = ["macros", "rt", "rt-multi-thread", "sync", "time"] }
tokio-util = { workspace = true }
tokio-stream = { workspace = true }
serde_json = { workspace = true }
anyhow = { workspace = true }
bytes = { workspace = true }
reqwest = { version = "0.12", default-features = false, features = ["json", "stream", "rustls-tls"] }
futures-core = "0.3"
tempfile = { workspace = true }
test-log = { version = "0.2", features = ["trace"] }
tracing-subscriber = { version = "0.3", features = ["env-filter", "fmt"] }
wat = "1"

[dev-dependencies]
rstest = { workspace = true }
