[package]
name = "protoclaw-agents"
version = "0.1.0"
edition.workspace = true
rust-version.workspace = true

[dependencies]
protoclaw-core = { workspace = true }
protoclaw-config = { workspace = true }
protoclaw-jsonrpc = { workspace = true }
protoclaw-sdk-agent = { workspace = true }
protoclaw-sdk-types = { workspace = true }
protoclaw-tools = { workspace = true }
tokio = { workspace = true }
tokio-util = { workspace = true }
futures = { workspace = true }
tracing = { workspace = true }
thiserror = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
bollard = { workspace = true }
uuid = { workspace = true }

[dev-dependencies]
tokio-test = { workspace = true }
tempfile = { workspace = true }
rstest = { workspace = true }
