[package]
name = "protoclaw-config"
version = "0.1.0"
edition.workspace = true
rust-version.workspace = true

[dependencies]
serde.workspace = true
serde_json.workspace = true
figment.workspace = true
thiserror.workspace = true
tracing.workspace = true
serde_yaml.workspace = true
subst.workspace = true

[dev-dependencies]
figment = { workspace = true, features = ["test"] }
tempfile.workspace = true
serde_yaml.workspace = true
rstest.workspace = true
