[package]
name = "protoclaw-core"
version = "0.1.0"
edition.workspace = true
rust-version.workspace = true

[dependencies]
tokio = { workspace = true, features = ["sync"] }
tokio-util.workspace = true
serde.workspace = true
serde_json.workspace = true
thiserror.workspace = true
tracing.workspace = true
uuid.workspace = true
