[package]
name = "protoclaw-core"
version = "0.1.0"
publish = false
edition.workspace = true
rust-version.workspace = true

[dependencies]
protoclaw-sdk-types = { workspace = true }
tokio = { workspace = true, features = ["sync"] }
tokio-util.workspace = true
serde.workspace = true
serde_json.workspace = true
thiserror.workspace = true
tracing.workspace = true
uuid.workspace = true

[dev-dependencies]
rstest = { workspace = true }
