[package]
name = "protoclaw-sdk-agent"
version = "0.1.0"
edition.workspace = true
rust-version.workspace = true

[dependencies]
protoclaw-sdk-types = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
thiserror = { workspace = true }
async-trait = "0.1"

[dev-dependencies]
tokio = { workspace = true }
rstest = { workspace = true }
