[package]
name = "protoclaw-sdk-agent"
version = "0.2.3"
description = "Agent adapter SDK for protoclaw — build ACP-compatible agents"
edition.workspace = true
rust-version.workspace = true
license = "MIT OR Apache-2.0"
repository = "https://github.com/donbader/protoclaw"
homepage = "https://github.com/donbader/protoclaw"
readme = "README.md"
keywords = ["agent", "mcp", "acp", "sdk"]
categories = ["network-programming"]

[dependencies]
protoclaw-sdk-types = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
thiserror = { workspace = true }

[dev-dependencies]
tokio = { workspace = true }
rstest = { workspace = true }
