[package]
name = "protoclaw-sdk-channel"
version = "0.2.3"
description = "Channel SDK for protoclaw — build messaging channel integrations"
edition.workspace = true
rust-version.workspace = true
license = "MIT OR Apache-2.0"
repository = "https://github.com/donbader/protoclaw"
homepage = "https://github.com/donbader/protoclaw"
readme = "README.md"
keywords = ["agent", "mcp", "acp", "sdk"]
categories = ["network-programming"]

[dependencies]
protoclaw-sdk-types = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
tokio = { workspace = true, default-features = false, features = ["io-util", "io-std", "macros", "rt-multi-thread", "sync"] }
thiserror = { workspace = true }
tracing = { workspace = true }

[dev-dependencies]
rstest = { workspace = true }
