[package]
name = "protoclaw-sdk-tool"
version = "0.1.0"
edition.workspace = true
rust-version.workspace = true

[dependencies]
protoclaw-sdk-types = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
tokio = { workspace = true }
thiserror = { workspace = true }
async-trait = "0.1"
schemars = "1"
rmcp = { version = "1.3", features = ["server", "transport-io"] }

[dev-dependencies]
rstest = { workspace = true }
