[package]
name = "protoclaw-sdk-tool"
version = "0.1.0"
description = "Tool SDK for protoclaw — build MCP-compatible tool servers"
edition.workspace = true
rust-version.workspace = true
license = "MIT OR Apache-2.0"
repository = "https://github.com/donbader/protoclaw"
homepage = "https://github.com/donbader/protoclaw"
readme = "README.md"
keywords = ["agent", "mcp", "acp", "sdk"]
categories = ["network-programming"]

[dependencies]
protoclaw-sdk-types = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
tokio = { workspace = true }
thiserror = { workspace = true }
async-trait = "0.1"
schemars = "1"
rmcp = { version = "1.3", features = ["server", "transport-io"] }
tracing = { workspace = true }

[dev-dependencies]
rstest = { workspace = true }
