[package]
name = "protoclaw-sdk-types"
version = "0.2.1"
description = "Shared types for the protoclaw agent-channel-tool SDK"
edition.workspace = true
rust-version.workspace = true
license = "MIT OR Apache-2.0"
repository = "https://github.com/donbader/protoclaw"
homepage = "https://github.com/donbader/protoclaw"
readme = "README.md"
keywords = ["agent", "mcp", "acp", "sdk"]
categories = ["network-programming"]

[dependencies]
serde = { workspace = true }
serde_json = { workspace = true }

[dev-dependencies]
rstest.workspace = true
