[package]
name = "protoclaw-supervisor"
version = "0.1.0"
publish = false
edition.workspace = true
rust-version.workspace = true

[dependencies]
protoclaw-core = { path = "../protoclaw-core" }
protoclaw-config = { path = "../protoclaw-config" }
protoclaw-agents = { path = "../protoclaw-agents" }
protoclaw-channels = { workspace = true }
protoclaw-tools = { workspace = true }
tokio = { workspace = true, features = ["macros", "rt", "rt-multi-thread", "signal", "sync", "time"] }
tokio-util = { workspace = true }
thiserror = { workspace = true }
tracing = { workspace = true }
serde_json = { workspace = true }
axum = { workspace = true, features = ["tokio"] }
metrics = { workspace = true }
metrics-exporter-prometheus = { workspace = true }

[dev-dependencies]
rstest = { workspace = true }
tempfile = { workspace = true }
