[package]
name = "protoclaw-test-helpers"
version = "0.1.0"
edition.workspace = true
rust-version.workspace = true
publish = false

[dependencies]
protoclaw-config = { workspace = true }
protoclaw-core = { workspace = true }
protoclaw = { path = "../protoclaw" }
tokio = { workspace = true }
tokio-util = { workspace = true }
tokio-stream = { workspace = true }
serde_json = { workspace = true }
anyhow = { workspace = true }
bytes = { workspace = true }
reqwest = { version = "0.12", features = ["json", "stream"] }
futures-core = "0.3"
test-log = { version = "0.2", features = ["trace"] }
tracing-subscriber = { version = "0.3", features = ["env-filter", "fmt"] }
