[package]
name = "protoclaw-tools"
version = "0.1.0"
publish = false
edition.workspace = true
rust-version.workspace = true

[dependencies]
protoclaw-core = { workspace = true }
protoclaw-config = { workspace = true }
protoclaw-sdk-tool = { workspace = true }
tokio = { workspace = true }
tokio-util = { workspace = true }
tracing = { workspace = true }
thiserror = { workspace = true }
serde_json = { workspace = true }
rmcp = { version = "1.4", features = ["client", "server", "transport-io", "transport-child-process", "transport-streamable-http-server"] }
axum = "0.8"
async-trait = "0.1"
futures = { workspace = true }
wasmtime = { workspace = true }
wasmtime-wasi = { workspace = true }

[dev-dependencies]
tokio-test = { workspace = true }
tempfile = { workspace = true }
wat = "1"
rstest = { workspace = true }
