[package]
name = "protoclaw-integration-tests"
version = "0.1.0"
edition.workspace = true
rust-version.workspace = true

[dependencies]
protoclaw = { path = "../../crates/protoclaw" }
protoclaw-config = { workspace = true }
protoclaw-test-helpers = { workspace = true }
tokio = { workspace = true }
serde_json = { workspace = true }
reqwest = { version = "0.12", features = ["json", "stream"] }
tokio-util = { workspace = true }
tokio-stream = { workspace = true }
anyhow = { workspace = true }
figment = { version = "0.10", features = ["yaml", "test"] }

[dev-dependencies]
tokio-test = { workspace = true }
