[package]
name = "protoclaw-integration-tests"
version = "0.1.0"
publish = false
edition.workspace = true
rust-version.workspace = true

[dependencies]
protoclaw-supervisor = { workspace = true }
protoclaw-config = { workspace = true }
protoclaw-test-helpers = { workspace = true }
tokio = { workspace = true, features = ["macros", "rt", "rt-multi-thread", "sync", "time"] }
serde_json = { workspace = true }
serde_yaml = { workspace = true }
reqwest = { version = "0.12", features = ["json", "stream"] }
tokio-util = { workspace = true }
tokio-stream = { workspace = true }
anyhow = { workspace = true }
figment = { version = "0.10", features = ["yaml", "test"] }
bollard = { workspace = true }
test-log = { version = "0.2", features = ["trace"] }
tracing-subscriber = { version = "0.3", features = ["env-filter", "fmt"] }
rstest = { workspace = true }

[dev-dependencies]
tokio-test = { workspace = true }
