[package]
name = "mock-agent"
version = "0.1.0"
publish = false
edition.workspace = true
rust-version.workspace = true

[[bin]]
name = "mock-agent"
path = "src/main.rs"

[dependencies]
serde = { workspace = true }
serde_json = { workspace = true }
tokio = { workspace = true, features = ["io-std", "io-util", "macros", "rt", "rt-multi-thread", "time"] }
uuid = { workspace = true }
