[package]
name = "mock-agent"
version = "0.1.0"
edition.workspace = true
rust-version.workspace = true

[[bin]]
name = "mock-agent"
path = "src/main.rs"

[dependencies]
agent-client-protocol = { workspace = true }
async-trait = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
serde_yaml = { workspace = true }
tokio = { workspace = true, features = ["io-std", "io-util", "macros", "rt", "time"] }
tokio-util = { workspace = true }
uuid = { workspace = true }

[lints]
workspace = true
