[package]
name = "opencode-wrapper"
version = "0.1.0"
publish = false
edition.workspace = true
rust-version.workspace = true

[[bin]]
name = "opencode-wrapper"
path = "src/main.rs"

[dependencies]
tokio = { workspace = true, features = ["io-util", "macros", "process", "rt", "rt-multi-thread"] }
serde = { workspace = true }
serde_json = { workspace = true }
tracing = { workspace = true }
tracing-subscriber = { workspace = true }

[dev-dependencies]
rstest = { workspace = true }
