[package]
name = "debug-http"
version = "0.1.0"
edition.workspace = true
rust-version.workspace = true

[[bin]]
name = "debug-http"
path = "src/main.rs"

[dependencies]
async-trait = "0.1"
axum = { workspace = true }
protoclaw-sdk-channel = { workspace = true }
protoclaw-sdk-types = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
tokio = { workspace = true }
tokio-stream = { workspace = true, features = ["sync"] }
tracing = { workspace = true }
tracing-subscriber = { workspace = true }

[dev-dependencies]
tower = "0.5"
