[package]
name = "debug-http"
version = "0.1.0"
publish = false
edition.workspace = true
rust-version.workspace = true

[[bin]]
name = "debug-http"
path = "src/main.rs"

[dependencies]
axum = { workspace = true }
anyclaw-sdk-channel = { workspace = true }
anyclaw-sdk-types = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
tokio = { workspace = true, features = ["macros", "net", "rt", "rt-multi-thread", "sync", "time"] }
tokio-stream = { workspace = true, features = ["sync"] }
tracing = { workspace = true }
tracing-subscriber = { workspace = true }

[dev-dependencies]
tower = "0.5"

[lints]
workspace = true
